[package]
name = "service"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-files = "0.6.6"
actix-web = "4.10.2"
async-trait = "0.1.88"
chrono = {version ="0.4.41", features = ["serde"]}
log = "0.4.27"
mockall = "0.13.1"
serde = {version ="1.0.219", features = ["derive"]}
serde_json = "1.0.140"
sqlx = {version ="0.8.5", features = ["postgres", "uuid", "macros", "runtime-tokio", "chrono"]}
thiserror = "2.0.12"
tokio = { version = "1.45.1", features = ["full"] }
uuid = {version ="1.17.0", features = ["serde", "v4"]}
dotenv = "0.15.0"
time = "0.3.36"